--- a/kejadian/002-kejadian-1-2.html
+++ b/kejadian/002-kejadian-1-2.html
@@ -32,5 +32,7 @@
   <footer>
     <a href="index.html">&larr; Kembali ke daftar</a>
   </footer>
+  <script src="/script.js"></script>
 </body>
+
 </html>
